02-basic-rest-api: swagger documentation now available
