# 02-basic-rest-api/docs/swagger.json
@@ -7,17 +7,41 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "This is a basic recipes API in go (Gin).",
+        "description": "This is a basic recipes API in go (Gin). A CRUD demonstration.",
         "title": "Recipes API",
         "contact": {
             "name": "Roshan Lamichhane"
         },
         "version": "1.0.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:9000",
     "basePath": "/",
     "paths": {
         "/recipes": {
+            "get": {
+                "description": "List all the recipes",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List all the recipes",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Recipe"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new recipe",
                 "consumes": [
@@ -36,6 +60,47 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    }
+                }
+            }
+        },
+        "/recipes/id": {
+            "put": {
+                "description": "Update a recipe",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update a recipe",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Recipe"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a recipe",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete a recipe",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
